--- a/app/views/users/_user_infos.html.haml
+++ b/app/views/users/_user_infos.html.haml
@@ -5,9 +5,15 @@
 
   - show_selection :int_annuali_visual, "Corso annuale Visual Design"
   - show_selection :int_annuali_interior, "Corso annuale Interior Design"
+  - show_selection :int_master_visual, "Master Visual Design"
+  - show_selection :int_master_interior, "Master Interior Design"
+  - show_selection :int_special_visual, "Corsi specialistici Visual Design"
+  - show_selection :int_special_interior, "Corsi specialistici Interior Design"
   - show_selection :int_brevi_visual, "Corsi brevi Visual Design"
   - show_selection :int_brevi_interior, "Corsi brevi Interior Design"
   - show_selection :int_brevi_graphic, "Corsi brevi Grafica Editoriale"
+  - show_selection :int_workshop_visual, "Laboratorio Visual Design"
+  - show_selection :int_workshop_interior, "Laboratorio Interior Design"
 
   %h3 Voglio partecipare a:
 
