link menu a laboratory inglesi

--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -50,10 +50,10 @@
           %li
             %ul.subnav
               %li
-                = link_to tf("Visual Design"), page_path(id: tf("laboratorio_visual_design", "visual_design_lab"))
+                = link_to tf("Visual Design"), page_path(id: tf("laboratorio_visual_design", "visual_design_workshop"))
               %li
-                = link_to tf("Interior Design"), page_path(id: tf("laboratorio_interior_design", "interior_design_lab"))
-            = link_to tf("Laboratori", "Labs"), js_void
+                = link_to tf("Interior Design"), page_path(id: tf("laboratorio_interior_design", "interior_design_workshop"))
+            = link_to tf("Laboratori", "Workshops"), js_void
 
         - else
           %li
