--- a/app/views/forms/_pdf.html.haml
+++ b/app/views/forms/_pdf.html.haml
@@ -20,7 +20,7 @@
     - if pdf.match /^email_/
       - pdf_name = pdf.gsub /^email_/, ''
       %h3
-        %a{ href: "mailto:#{Array.new(UserMailer::ADMIN).first}?subject=Richiesta invio pdf: #{pdf}&body=Vorrei ricevere il seguente pdf appena pronto: #{pdf_name.humanize}." }
+        %a{ href: "mailto:#{Array.new(UserMailer::ADMIN).first}?subject=Richiesta invio pdf: #{pdf_name.humanize}&body=Vorrei ricevere il seguente pdf appena pronto: #{pdf_name.humanize}." }
           = tf "Richiedi il programma in pdf", "Request the pdf for the program"
       = tf "Ti sarà inviato via email quanto prima.", "We will send you an email as soon as possible."
     - else
