--- a/app/views/sections/_login.html.haml
+++ b/app/views/sections/_login.html.haml
@@ -33,6 +33,6 @@
     |
     = link_to "Login", "/login"
     |
-    = link_to "Registrati", "/pages/info"
+    = link_to tf("Registrati", "Register"), "/pages/info"
     
     
