--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -733,7 +733,7 @@ $video_home_height: 270px
 form
   margin-top: 10px
 
-input, textarea
+input, textarea, select#user_country
   color: #333
   display: block
   width: 80%
@@ -741,7 +741,7 @@ input, textarea
 label
   font-size: 0.85em
   font-weight: bold
-input, textarea
+input, textarea, select#user_country
   margin: 4px 0 10px
   padding: 4px 8px
   font-size: 1.2em
