--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -51,6 +51,9 @@
       = f.text_field :city
       = f.label :cap, tf("CAP", "ZIP")
       = f.text_field :cap
+      = f.label :country, tf("Paese", "Country")
+      - country = !@user.country && current_lang == "it" ? "Italy" : @user.country
+      = f.select :country, options_for_select(Country.all, selected: country), include_blank: true
       = f.label :tel, tf("Telefono", "Phone")
       = f.text_field :tel
       = f.label :qualification, tf("Titolo di studio", "Degree")
