--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -535,14 +535,6 @@ ul#selection {
     width: 360px;
     height: 270px; }
 
-#aside-container {
-  clear: right;
-  float: right;
-  display: block;
-  width: 360px;
-  color: white;
-  padding: 0 0;
-  margin: -26px 0px 0 15px; }
 #aside {
   background: #c82d5e;
   clear: right;
@@ -552,9 +544,8 @@ ul#selection {
   color: white;
   padding: 10px 10px;
   margin: 0 2px 0 15px; }
-
   #aside li {
-    margin: 6px 0; }
+    margin: 4px 0; }
   #aside p {
     text-shadow: none; }
   #aside a {
@@ -582,7 +573,7 @@ ul#selection {
 form {
   margin-top: 10px; }
 
-input, textarea {
+input, textarea, select#user_country {
   color: #333333;
   display: block;
   width: 80%; }
@@ -591,7 +582,7 @@ label {
   font-size: 0.85em;
   font-weight: bold; }
 
-input, textarea {
+input, textarea, select#user_country {
   margin: 4px 0 10px;
   padding: 4px 8px;
   font-size: 1.2em; }
@@ -778,10 +769,6 @@ input.radio2 {
     margin: 0 0 5px 0; }
 .forms_form .form {
   width: 55%;
-  float: right; }
-  
-  .forms_form .tutor .form {
-  width: 100%;
   float: right; }
 .forms_form .checkboxes_bottom input {
   float: left;
@@ -989,14 +976,11 @@ img.image_left {
 .fb_like {
   clear: left;
   margin: 0 0 5px 0; }
-  
   .fb_like iframe {
     background: #e9e9e9; }
 
 .twitter {
-  width:auto;
-  display:inline;
-  max-width: 80px;
+  width: 110px;
   margin: 0 0 5px 0; }
 
 .twitter, .linkedin, .fb_like {
