--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -865,6 +865,11 @@ input.radio2
     label
       float: left
 
+  .tutor .form
+    width: 100%
+    float: right
+
+
 .pdf_clear
   clear: left
 
