Linked banner feature

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -56,6 +56,7 @@
         #footer
           = footer_text
     .clear
+    #fb-root
     :javascript
       #{crazyegg}
       #{gauges("4df80dfbf5a1f57c15000001")}
