--- a/app/views/sections/_header.html.haml
+++ b/app/views/sections/_header.html.haml
@@ -1,5 +1,5 @@
 %h1
-  = site_title 
+  = site_title
 %a{ href: "/" }
   - if master?
     = image_tag "logo_blu.png", id: "logo"
@@ -9,9 +9,12 @@
   - files = Dir.glob("#{Rails.root}/public/images/banner/#{master? ? "master" : "main"}/*").sort
   - files = files.sort_by { rand } # randomize
   - files = files[0..6] # limit
+  - banner = Banner.new files
   - files.each_with_index do |file, idx|
     - options = {}
     - options[:class] = "first" if idx == 0
+    - page = banner.page(file)
+    - options[:"data-page-url"] = tr(page).title_url if page
     = image_tag file.gsub("#{Rails.root}/public", ''), options
     -# image_tag "banner/2.png"#, class: "last"
 .clear
