--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -321,6 +321,8 @@ a#profile_name {
     display: none; }
   #banner img.first {
     display: block; }
+  #banner img[data-page-url] {
+    cursor: pointer; }
 
 .center {
   text-align: center; }
