--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -450,6 +450,8 @@ a#profile_name
     display: none
   img.first
     display: block
+  img[data-page-url]
+    cursor: pointer
 
 
 // webkit only banner gallery
