--- a/app/views/sections/_header.html.haml
+++ b/app/views/sections/_header.html.haml
@@ -7,8 +7,8 @@
     = image_tag "logo.png", id: "logo"
 #banner
   - files = Dir.glob("#{Rails.root}/public/images/banner/#{master? ? "master" : "main"}/*").sort
-  - files = files.sort_by { rand } # randomize
-  - files = files[0..6] # limit
+  -# files = files.sort_by { rand } # randomize
+  -# files = files[0..6] # limit
   - banner = Banner.new files
   - files.each_with_index do |file, idx|
     - options = {}
