--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,9 @@
     %script{ type: "text/javascript" }
       var action = '#{controller.action_name}'
       var resources = '#{controller.controller_name.pluralize}'
+      $(function(){
+      = yield :jquery
+      })
 
     - if @page && @page.id == 9 # contacts
       %script{ src: "http://maps.google.com/maps/api/js?sensor=false" }
