--- a/app/views/forms/_pdf.html.haml
+++ b/app/views/forms/_pdf.html.haml
@@ -10,7 +10,7 @@
     var label = $("h3").html()
 
 .forms_pdf
-  - label = tf("Scarica il pdf informativo del corso (è necessario essere registrati al sito. Se non sei registrato vai alla sezione INFO per registrarti)", "Download the course information pdf (you must be registered to the site. Go to the INFO page to register.")
+  - label = tf("Scarica il pdf informativo del corso", "Download the course information pdf")
 
   - if logged_in?
 
