cambio url riscritti

--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -21,19 +21,19 @@
             %ul.subnav
               %li
                 %ul.subnav.sub2
-                  %li= link_to tf("Grafica Editoriale", "Editorial Graphics"), page_path(id: tf("grafica_editoriale", "press_graphics"))
-                  %li= link_to tf("Illustrazione", "Illustration"), page_path(id: tf("illustrazione_visual_design", "visual_design_illustration"))
-                  %li= link_to tf("Photoshop", "Photoshop"), page_path(id: tf("photoshop_visual_design", "visual_design_photoshop"))
-                  %li= link_to tf("Web Design", "Web Design"), page_path(id: tf("web_design_visual_design", "visual_design_webdesign"))
+                  %li= link_to tf("Grafica Editoriale", "Editorial Graphics"), page_path(id: tf("corso_grafica_editoriale", "press_graphics_course"))
+                  %li= link_to tf("Illustrazione", "Illustration"), page_path(id: tf("corso_illustrazione_visual_design", "visual_design_illustration"))
+                  %li= link_to tf("Photoshop", "Photoshop"), page_path(id: tf("corso_photoshop", "visual_design_photoshop"))
+                  %li= link_to tf("Web Design", "Web Design"), page_path(id: tf("corso_web_design", "web_design_course"))
                 = link_to tf("Visual Design"), js_void
               %li
                 %ul.subnav.sub2
                   %li= link_to tf("Modellazione 3D", "3D modelling"), page_path(id: tf("interior_design_modellazione_3d", "interior_design_3d_modelling"))
-                  %li= link_to tf("Rendering", "Rendering"), page_path(id: tf("rendering_interior_design", "interior_design_rendering"))
-                  %li= link_to tf("Sketch-Up", "Sketch-Up"), page_path(id: tf("sketch_up_interior_design", "interior_design_sketchup"))
-                  %li= link_to tf("Autocad", "Autocad"), page_path(id: tf("autocad_interior_design", "interior_design_autocad"))
-                  %li= link_to tf("3D Studio Max", "3D Studio Max"), page_path(id: tf("3d_studio_max_interior_design", "interior_design_3dstudiomax"))
-                  %li= link_to tf("V-Ray", "V-Ray"), page_path(id: tf("v-ray", "vray"))
+                  %li= link_to tf("Rendering", "Rendering"), page_path(id: tf("corso_rendering_interior_design", "interior_design_rendering"))
+                  %li= link_to tf("Sketch-Up", "Sketch-Up"), page_path(id: tf("corso_sketch_up_interior_design", "interior_design_sketchup"))
+                  %li= link_to tf("Autocad", "Autocad"), page_path(id: tf("corso_autocad_interior_design", "interior_design_autocad"))
+                  %li= link_to tf("3D Studio Max", "3D Studio Max"), page_path(id: tf("corso_3d_studio_max_interior_design", "interior_design_3dstudiomax"))
+                  %li= link_to tf("V-Ray", "V-Ray"), page_path(id: tf("corso_v-ray", "vray_course"))
                 = link_to tf("Interior Design"), js_void
                 
             = link_to tf("Corsi specialistici", "Specialist Courses"), js_void
