--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
     %meta{ property: "og:title", content: layout_title }
     %meta{ property: "og:type", content: "website" }/
     %meta{ property: "og:site_name", content: "Accademia Cappiello" }/
-    %meta{ property: "og:image", content: "http://accademia-cappiello.it/images/logo.png" }/
+    %meta{ property: "og:image", content: og_image }/
     %meta{ property: "og:description", content: meta_description }/
     %meta{ property: "og:url", content: request_url }/
     %meta{ property: "fb:admins", content: "1218562195" }/
