--- a/app/views/elements/_home.haml
+++ b/app/views/elements/_home.haml
@@ -4,7 +4,7 @@
   #home_right
     - if home_page?
       %h2 &nbsp; 
-    = parse_text markup("<a href=\"/pages/concorsi/\"><img src=\"http://accademia-cappiello.it/uploads/bando-quadrato.png\" alt=\"Concorso per Idee - reinterpretare il logo dell\Accademia d\'Arte e Design Leonetto Cappiello\" /></a>")
+    = parse_text markup("vimeo(22238816)")
     = render partial: "sections/articles"
   - text = markup tr(@page).text
   = parse_text text
