--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -768,7 +768,10 @@ input.radio2 {
     width: 30px; }
   .forms_form .checkboxes h3 {
     clear: left;
-    margin: 0 0 5px 0; }
+    margin: 0 0 15px 0; }
+  .forms_form .checkboxes h3.open_day {
+    clear: left;
+    margin: 30px 0 15px 0; }
 .forms_form .form {
   width: 55%;
   float: right; }
