--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -855,7 +855,10 @@ input.radio2
       width: 30px
     h3
       clear: left
-      margin: 0 0 5px 0
+      margin: 0 0 15px 0
+    h3.open_day
+      clear: left
+      margin: 30px 0 15px 0  
   .form
     width: 55%
     float: right
