modifca js e css per slider concorsi

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -453,6 +453,51 @@ a#profile_name
   img[data-page-url]
     cursor: pointer
 
+#slider1
+  clear: both
+  float: left
+  margin: 0 0 0 2.3%
+  height: 512px
+  width: $content_width
+  img
+    +box-shadow(0px, -3px, 10px, #333)
+    display: none
+    height: 512px
+  img.first
+    display: block
+  img[data-page-url]
+    cursor: pointer
+
+#slider2
+  clear: both
+  float: left
+  margin: 0 0 0 2.3%
+  width: $content_width
+  height: 512px
+  img
+    +box-shadow(0px, -3px, 10px, #333)
+    display: none
+    height: 512px
+  img.first
+    display: block
+  img[data-page-url]
+    cursor: pointer
+
+#slider3
+  clear:both
+  float: left
+  margin: 0 0 0 2.3%
+  width: $content_width
+  height: 512px
+  img
+    +box-shadow(0px, -3px, 10px, #333)
+    display: none
+    height: 512px
+  img.first
+    display: block
+  img[data-page-url]
+    cursor: pointer
+
 
 // webkit only banner gallery
 //
