--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -324,6 +324,56 @@ a#profile_name {
   #banner img[data-page-url] {
     cursor: pointer; }
 
+#slider1 {
+  clear: both;
+  float: left;
+  margin: 0 0 0 2.3%;
+  height: 512px;
+  width: 84.7%; }
+  #slider1 img {
+    -moz-box-shadow: 0px -3px 10px #333333;
+    -webkit-box-shadow: 0px -3px 10px #333333;
+    box-shadow: 0px -3px 10px #333333;
+    display: none;
+    height: 512px; }
+  #slider1 img.first {
+    display: block; }
+  #slider1 img[data-page-url] {
+    cursor: pointer; }
+
+#slider2 {
+  clear: both;
+  float: left;
+  margin: 0 0 0 2.3%;
+  width: 84.7%;
+  height: 512px; }
+  #slider2 img {
+    -moz-box-shadow: 0px -3px 10px #333333;
+    -webkit-box-shadow: 0px -3px 10px #333333;
+    box-shadow: 0px -3px 10px #333333;
+    display: none;
+    height: 512px; }
+  #slider2 img.first {
+    display: block; }
+  #slider2 img[data-page-url] {
+    cursor: pointer; }
+
+#slider3 {
+  float: left;
+  margin: 0 0 0 2.3%;
+  width: 84.7%;
+  height: 512px; }
+  #slider3 img {
+    -moz-box-shadow: 0px -3px 10px #333333;
+    -webkit-box-shadow: 0px -3px 10px #333333;
+    box-shadow: 0px -3px 10px #333333;
+    display: none;
+    height: 512px; }
+  #slider3 img.first {
+    display: block; }
+  #slider3 img[data-page-url] {
+    cursor: pointer; }
+
 .center {
   text-align: center; }
 
