fix error per commit temporaneo

--- a/app/views/forms/_pdf.html.haml
+++ b/app/views/forms/_pdf.html.haml
@@ -69,7 +69,8 @@
       = f.submit tf("Scarica", "Download"), class: "submit"
 .pdf_clear
 
-.info_request
-  %h3
-    %a{ href: "/pages/info?section=#{pdf_to_section(pdf)}" }
-      Richiedi informazioni
+/
+  .info_request
+    %h3
+      %a{ href: "/pages/info?section=#{"TODO: section"}" }
+        Richiedi informazioni
