checkbox richiesta informazioni spunta automatica

--- a/app/views/forms/_pdf.html.haml
+++ b/app/views/forms/_pdf.html.haml
@@ -69,8 +69,8 @@
       = f.submit tf("Scarica", "Download"), class: "submit"
 .pdf_clear
 
-/
-  .info_request
-    %h3
-      %a{ href: "/pages/info?section=#{"TODO: section"}" }
-        Richiedi informazioni
+
+.info_request
+  %h3
+    %a{ href: "/pages/info?section=#{@page.int_name}" }
+      Richiedi informazioni
