--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -24,9 +24,9 @@
       = f.check_box :int_master_interior
       = f.label     :int_master_interior,  "INTERIOR DESIGN -#{tf "master", "master"}"
       = f.check_box :int_special_visual
-      = f.label     :int_special_visual,    "VISUAL DESIGN - #{tf "corsi speciali", "special courses"}"
+      = f.label     :int_special_visual,    "VISUAL DESIGN - #{tf "corsi specialistici", "specialist courses"}"
       = f.check_box :int_special_interior
-      = f.label     :int_special_interior,  "INTERIOR DESIGN -#{tf "corsi speciali", "special courses"}"
+      = f.label     :int_special_interior,  "INTERIOR DESIGN -#{tf "corsi specialistici", "specialist courses"}"
       = f.check_box :int_workshop_visual
       = f.label     :int_workshop_visual,    "VISUAL DESIGN - #{tf "laboratorio serale", "workshop"}"
       = f.check_box :int_workshop_interior
