--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,3 +1,5 @@
+
+
 - content_for :admin do
   Articolo:
   = link_to "Modifica", [:edit, @article]
@@ -12,9 +14,4 @@
 
 
   .right
-    = tf "Vai a:", "Go to:"
-    = link_to "News", [:news]
-    |
-    = link_to "Blog", [:posts]
-
-  .clear
+    = link_to tf("Torna alla pagina News", "Back to News page"), [:news]
