--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -419,29 +419,10 @@ a#profile_name
   font-size: 0.7em
   float: right
 
-.articles.show #content
-  img
-    float:right
-    width: 42%
-    margin: 0 0 1% 1%
-  img:first-child
-    width: 35%
-    margin: 0 1% 1% 0
-    float: left
-
-.articles.index
-  .date
-    float: right
-    margin-right: 15px
-    font-size: 0.8em
-  #articles_list li
-    margin: 10px 0 30px
-
-.articles.index #content
-  img
-    width: 25%
-    margin: 0 1% 1% 0
-    float: left
+.articles.index .date
+  float: left
+  margin-right: 15px
+  font-size: 0.8em
 
 #articles_list li
   a
@@ -922,7 +903,7 @@ input.radio2
       margin: 0 0 15px 0
     h3.open_day
       clear: left
-      margin: 30px 0 15px 0
+      margin: 30px 0 15px 0  
   .form
     width: 55%
     float: right
