--- a/app/views/sections/_articles.html.haml
+++ b/app/views/sections/_articles.html.haml
@@ -8,20 +8,18 @@
       .insert_article
         = link_to "Inserisci News", new_article_path(article_type: "news")
         |
-        = link_to "Lista News", [:news]
+        = link_to "Lista News", news_path()
   .clear
-
-  %h5
-    %span Blog
-  .eventi
-    %ul
-      = render partial: "articles/article", collection: @posts
-    - if admin?
-      .insert_article
-        = link_to "Inserisci Blog Post", new_article_path(article_type: "post")
-        |
-        = link_to "Vai al blog", [:posts]
-  .clear
+  -#
+  -# %h5
+  -#   %span Eventi
+  -# .eventi
+  -#   %ul
+  -#     = render partial: "articles/article", collection: @events
+  -#   - if admin?
+  -#     .insert_article
+  -#       = link_to "Inserisci Evento", new_article_path(article_type: "event")
+  -# .clear
 
   .lavoro
     .box
