modifiche menu e truncate

--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -4,6 +4,8 @@
   = link_to text.html_safe, link
   - unless home_page?
     %p
-      = markup truncate(article.text)
+      - text = article.text
+      - text = truncate text if section == "news"
+      = markup text
 
   .clear
