--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -3,9 +3,6 @@
   #nav_cont
     %ul#nav
       - pages.each_with_index do |page, idx|
-        - if idx == 1
-          %li
-            = link_to "Blog", [:posts]
         - case page.title_url_en
         - when "annual_courses"
           %li
@@ -66,7 +63,7 @@
                 = link_to tf("Informazioni", "Info"), page_path(id: tf("info", "info"))
               %li
                 = link_to tf("Incontra un Tutor", "Meet the Tutor"), page_path(id: tf("incontro-tutor", "tutor-appointment"))
-              - if page.id != 52 || english?
+              - if english?
                 %li
                   = link_to tf("Info per stranieri", "Student Help"), page_path(id: tf("info", "info"))
 
