aggiunta corso digital communication & design
aggiunta agina, interessi in form, borse di studio, voce menu corsi
annuali

--- a/app/views/forms/_borse_di_studio.html.haml
+++ b/app/views/forms/_borse_di_studio.html.haml
@@ -7,7 +7,9 @@
       = f.label :interested_in_visual, "VISUAL DESIGN"
       = f.radio_button :interested_in, "visual", class: "radio" 
       = f.label :interested_in_interior, "INTERIOR DESIGN"
-      = f.radio_button :interested_in, "interior", class: "radio2"
+      = f.radio_button :interested_in, "interior", class: "radio"
+      = f.label :interested_in_web, "DIGITAL COMMUNICATION & DESIGN"
+      = f.radio_button :interested_in, "web", class: "radio2" 
   
     .first
       = f.label :first_name, tf("Nome", "Name")
