--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -19,6 +19,8 @@
       = f.label     :int_annuali_visual,    "VISUAL DESIGN - #{tf "corsi annuali", "annual courses"}"
       = f.check_box :int_annuali_interior
       = f.label     :int_annuali_interior,  "INTERIOR DESIGN - #{tf "corsi annuali", "annual courses"}"
+      = f.check_box :int_annuali_web
+      = f.label     :int_annuali_web,  "DIGITAL COMMIUNICATION & DESIGN"
       = f.check_box :int_master_visual
       = f.label     :int_master_visual,    "VISUAL DESIGN - #{tf "master", "master"}"
       = f.check_box :int_master_interior
