--- a/app/views/users/_user_infos.html.haml
+++ b/app/views/users/_user_infos.html.haml
@@ -5,6 +5,7 @@
 
   - show_selection :int_annuali_visual, "Corso annuale Visual Design"
   - show_selection :int_annuali_interior, "Corso annuale Interior Design"
+  - show_selection :int_annuali_web, "Corso annuale Digital Communication & Design"
   - show_selection :int_master_visual, "Master Visual Design"
   - show_selection :int_master_interior, "Master Interior Design"
   - show_selection :int_special_visual, "Corsi specialistici Visual Design"
