--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -897,6 +897,8 @@ input.radio2
 #user_interested_in_interior
   display: inline
 
+#user_interested_in_web
+  display: inline
 
 
 .borse_di_studio
