--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -815,6 +815,9 @@ input.radio2 {
 #user_interested_in_interior {
   display: inline; }
 
+#user_interested_in_web {
+  display: inline; }
+
 .borse_di_studio .first {
   float: left;
   width: 48%; }
