--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -16,33 +16,35 @@
       %div.clear
       %h3.info_title= tf("RICHIESTA INFORMAZIONI", "INFORMATION REQUEST")
       = f.check_box :int_annuali_visual
-      = f.label     :int_annuali_visual,    "VISUAL DESIGN - #{tf "corsi annuali", "annual courses"}"
+      = f.label     :int_annuali_visual,    "VISUAL DESIGN - #{tf "annuale", "annual"}"
       = f.check_box :int_annuali_interior
-      = f.label     :int_annuali_interior,  "INTERIOR DESIGN - #{tf "corsi annuali", "annual courses"}"
+      = f.label     :int_annuali_interior,  "INTERIOR DESIGN - #{tf "annuale", "annual"}"
       = f.check_box :int_annuali_web
-      = f.label     :int_annuali_web,  "DIGITAL COMMIUNICATION & DESIGN"
+      = f.label     :int_annuali_web,  "DIGITAL COMMIUNICATION"
       = f.check_box :int_master_visual
       = f.label     :int_master_visual,    "VISUAL DESIGN - #{tf "master", "master"}"
       = f.check_box :int_master_interior
       = f.label     :int_master_interior,  "INTERIOR DESIGN -#{tf "master", "master"}"
       = f.check_box :int_special_visual
-      = f.label     :int_special_visual,    "VISUAL DESIGN - #{tf "corsi specialistici", "specialist courses"}"
+      = f.label     :int_special_visual,    "VISUAL DESIGN - #{tf "specialistici", "specialist"}"
       = f.check_box :int_special_interior
-      = f.label     :int_special_interior,  "INTERIOR DESIGN -#{tf "corsi specialistici", "specialist courses"}"
+      = f.label     :int_special_interior,  "INTERIOR DESIGN -#{tf "specialistici", "specialist"}"
       = f.check_box :int_workshop_visual
-      = f.label     :int_workshop_visual,    "VISUAL DESIGN - #{tf "laboratorio serale", "workshop"}"
+      = f.label     :int_workshop_visual,    "VISUAL DESIGN - #{tf "laboratorio", "workshop"}"
       = f.check_box :int_workshop_interior
-      = f.label     :int_workshop_interior,  "INTERIOR DESIGN -#{tf "laboratorio serale", "workshop"}"
+      = f.label     :int_workshop_interior,  "INTERIOR DESIGN -#{tf "laboratorio", "workshop"}"
       = f.check_box :int_brevi_visual
-      = f.label     :int_brevi_visual,    "VISUAL DESIGN - #{tf "corsi brevi", "short courses"}"
+      = f.label     :int_brevi_visual,    "VISUAL DESIGN - #{tf "breve", "short"}"
       = f.check_box :int_brevi_interior
-      = f.label     :int_brevi_interior,  "INTERIOR DESIGN -#{tf "corsi brevi", "short courses"}"
+      = f.label     :int_brevi_interior,  "INTERIOR DESIGN -#{tf "breve", "short "}"
       %div.clear
       %h3.open_day= tf("PARTECIPAZIONE OPEN DAY GRATUITO", "PARTICIPATION FREE OPEN DAY")
       = f.check_box :int_stage_visual
       = f.label     :int_stage_visual,    "#{tf "OPEN DAY", "OPEN DAY"} VISUAL DESIGN"
       = f.check_box :int_stage_interior
       = f.label     :int_stage_interior,  "#{tf "OPEN DAY", "OPEN DAY"} INTERIOR DESIGN"
+      = f.check_box :int_stage_web
+      = f.label     :int_stage_web,  "#{tf "OPEN DAY", "OPEN DAY"} DIGITAL COMMIUNICATION"
 
     .form
       = f.label :first_name, tf("Nome", "First name")
@@ -79,7 +81,7 @@
 
       .checkboxes_bottom
         = f.check_box :newsletter
-        = f.label     :newsletter,  tf("Newsletter - tieniti informato su nuovi corsi ed iniziative", "Newsletter - stay informed about new courses and events")
+        = f.label     :newsletter,  tf("Newsletter su nuovi corsi ed iniziative", "Newsletter - stay informed about new courses and events")
 
         = check_box_tag :authorize
         = label_tag     :authorize,  tf("autorizzo il trattamento dei dati personali", "I authorize the use of my personal data")
