content background color

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -188,8 +188,8 @@ $left_width: 13%
 
 $main: #c82d5e
 //$main: #a41747
-$bg_content: #E9E9E9
-
+$bg_content: #FCFCFC
+//$bg_content: #E9E9E9
 
 // style
 
