new address in welcome mail

--- a/app/views/user_mailer/welcome.haml
+++ b/app/views/user_mailer/welcome.haml
@@ -14,7 +14,6 @@
 
 %p A presto, 
 %p Accademia d'Arte e Design Leonetto Cappiello
-%p via della Fornace 33, 50125 - Firenze
-
+%p Viale Michelangiolo 19, 50125 - Firenze
 
 -# se sei studente seleziona nel tuo profilo la casella [ho studiato all'Accademia Cappiello] per poter caricare le foto dei tuoi lavori. 
